@@ -10,8 +10,8 @@
  *******************************************************************************/ 
 package org.eclipse.linuxtools.internal.valgrind.launch.remote;
 
-public interface IRemoteCaller {
+public interface IRemoteProcessListener {
 	
-	public void onError(Throwable t);
+	public void newProcess(Process p);
 
 }
