@@ -1,3 +1,12 @@
+2011-06-17  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/IRemoteCaller.java: New file.
+	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/RemoteCommand.java (..doneStart): 
+	When process gets created, notifiy IRemoteProcessListener.
+	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/ValgrindRemoteCommand.java (startProcess):
+	Pass this to RemoteCommand so process can be recorded when created. 
+	(newProcess): New method.
+
 2011-06-16  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/ValgrindTCFInputStream: Removed.
